--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h1>Treinos <span>exclusivos</span>
           para você!</h1>
         <p>Nós criamos treinos <strong>exclusivos e únicos para você.</strong>
+          <br/>
           Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.</p>
 
         <button>
@@ -42,6 +43,6 @@
     </footer>
   </div>
 
-  <img src="images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
+  <img id="balls" src="images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
 </body>
 </html>
