Ajustes no HTML

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
         <button>
           <img src="images/icone.svg" alt="Icone do WhatsApp">
-          Começe já
+          Comece já
         </button>
       </section>
       <img src="images/hero.png" alt="Deseho de uma mulher pulando corda em uma academia">
     </main>
     <footer>
-      Fale concosco no instagram <a href="https://instagram.com/treineme">@treine.me</a>
+      Fale conosco no instagram <a href="https://instagram.com/treineme">@treine.me</a>
     </footer>
   </div>
 
